néhány végpont, teszt modosítás
